--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,37 +1,55 @@
 body{
     font-family: Mulish;
     font-size: 15px;
-    line-height: 30px;
+    /* line-height: 20px; */
     letter-spacing: .5px;
-    word-wrap: break-word;
-    font-weight: 400;
+    /* word-wrap: break-word; */
+    font-weight: 500;
     background-color: #f8f8f8;
+    color:#ffffff;
     /* color: #080202; */
-    color: #767676;
-    box-sizing: border-box;
+    /* color: #767676; */
+    /* box-sizing: border-box; */
 }
 .aboutContainer2{
-   
-    height: 280vh;
+   background-color: #010222;
+   height: 230vh;
     display: block;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
+/* @media (max-width: 415px) { */
+    /* .aboutContainer2 {
+
+height: 300px;
+  
+    }
+  } */
 .aboutContainerText{
     height: 5%;
     width: 40%;
     /* background-color: rgb(7, 66, 117); */
     display: flex;
-    
+    align-items: center;
+    justify-content: center;
     position: relative;
   margin-left: 20%;
   /* margin-top: 20%; */
     
 }
+@media (max-width: 768px) {
+    .aboutContainerText {
+  
+height: 2%;
+width:50%
+  
+    }
+  }
+
 .aboutTextBtn{
     position: relative;
     width: 60%;
     height: 20%;
-    background-color: aqua;
+    /* background-color: aqua; */
     justify-content: space-around;
     margin-left: 10%;
     margin-top: 5%;
@@ -49,13 +67,29 @@ body{
     /* background-color: #8f8888; */
     margin-top: 10%;
     margin-left: 10%;
-    color: #000000;
+    color: #ffffff;
     display: flex;
      align-items: center;
      font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
      font-size: 40px;
      font-weight:bolder;
 }
+@media (max-width:768px) {
+    .aboutTextHeading  {
+  
+margin-top: 4%;
+margin-left: 10%;
+  
+    }
+  }
+@media (max-width: 768px) {
+    .aboutTextHeading p {
+  
+width: max-content;
+ font-size: 15px;
+  
+    }
+  }
 .aboutMyTextSubHeading{
     position: relative;
     width: 60%;
@@ -70,42 +104,114 @@ body{
      font-size: 40px;
      font-weight:bolder;
 }
-.aboutContainerImage{
+@media (max-width: 768px) {
+    .aboutMyTextSubHeading {
+
+ position: relative;
+ margin-top: 4%;   
+ width: 90%;
+ height: 40px;
+    }
+  }
+@media (max-width: 768px) {
+    .aboutMyTextSubHeading p {
+
+  font-size: 20px;
+    }
+  }
+  .containerHolder{
     position: absolute;
+    /* background-color: blue; */
+    display: flex;
+    height: 90vh;
+    width: 80%;
+    margin-top: 30px;
+    margin-left: 20%;
+  }
+  @media (max-width: 768px) {
+    .containerHolder {
+display: flex;
+flex-direction: column;
+    }
+  }
+.aboutContainerImage{
+    position: relative;
     margin-top: 5%;
-    height: 100vh;
-    width: 60%;
-    background-color: transparent;
-    margin-left: 25%;
-    margin-right: 10%;
+    height: 50vh;
+    width: 40%;
+    /* background-color: transparent; */
+    margin-left: 2%;
+    margin-right: 2%;
+    /* background-color: #043028; */
    
     /* justify-content: space-around; */
 }
+@media (max-width: 768px) {
+    .aboutContainerImage {
+  margin-top: 4%;
+  height: 200px;
+  margin-left: 0%;
+
+ 
+  
+    }
+  }
+
 .aboutContainerImage img{
     position: relative;
-    height: 100vh;
-    width: 90%;
+    height: 60vh;
+    width: 75%;
     border-radius: 20px;
     box-shadow: 0 0 100px rgba(0, 0, 0, 0.2);
 
 }
 
+@media (max-width: 768px) {
+    .aboutContainerImage img{
+  
+width: 230px;
+height: 250px;
+margin-left: 5%;
+ 
+  
+    }
+  }
+
 .aboutMyTextContainer{
     position: relative;
-    width: 75%;
-    height: 105vh;
-    /* background-color: rgb(228, 108, 11); */
-    margin-top: 55%;
-    margin-left: 22%;
-    margin-right: 10%;
+    width: 60%;
+    height: 90vh;
+    color: #ffffff;
+    /* background-color: transparent; */
+    /* background-color: aqua; */
+    margin-top: 0%;
+    padding-top: 60px;
+    /* margin-left: 2%; */
+    margin-right: 2%;
+    /* margin-left: 95%; */
+    /* margin-right: 10%; */
 }
+@media (max-width: 768px) {
+    .aboutMyTextContainer{
+  margin-top: 10%;
+position: relative;
+margin-left: 0%;
+width: 290px;
+height: 10vh;
+
+ 
+  
+    }
+  }
 .aboutMyTextHeading{
-    /* background-color: #ffffff; */
+    background-color: #ffffff;
     position: relative;
-    width: 50%;
-    height: 10vh;
+    width: 35%;
+    height: 12vh;
     display: flex;
+    margin-left: 63%;
     align-items: center;
+    margin-top: 10%;
     /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     /* font-size: 40px;
     font-weight:bolder; */
@@ -120,44 +226,89 @@ body{
     margin-right: 10%; */
 
 }
-.typer{
-    position: relative;
-    /* background-color: aquamarine; */
-    display: flex;
-    align-items: center;
-    width: 30%;
-    height: 8vh;
-    font-size: 30px;
-    font-weight:bolder;
-    font-family: Mulish;
-    /* font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-    /* font-size: 20px; */
+.aboutTextHeading p::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ffffff;
+  margin-top: 0px;
+  margin-left: 100%;
 }
+@media (max-width: 768px) {
+  .aboutTextHeading {
+
+ position: relative;
+ margin-top: 30%;   
+ width: 90%;
+ height: 50px;
+ font-weight: bold;
+    }
+  }
+@media (max-width: 768px) {
+    .aboutMyTextHeading p {
+
+  font-size: 20px;
+    }
+  }
+
 .aboutMyBio{
 /* background-color: #e92323; */
 height: 22vh;
 width: 100%;
-margin-top: 2%;
+margin-top: 0%;
+}
+@media (max-width: 768px) {
+  .aboutMyBio {
+margin-left: 0%;
+margin-top: 0%;
+height: auto;
+width: 250px;
+height: 90vh;
+
+  }
 }
 .aboutMyBio p{
-    color: #767676;
+    color: #ffffff;
+    font-size: 20px;
+}
+@media (max-width: 768px) {
+  .aboutMyBio p {
+font-size: 20px;
+  }
 }
 .aboutMyOtherDetails{
     display: flex; 
-    height: 36vh;
+    height: 56vh;
 width: 100%;
 /* background-color: #637c1d;  */
 margin-top: 1%;
 }
+@media (max-width: 768px) {
+#aboutMyOtherDetails {
+
+ margin-top: 100%;
+ display: flex;
+ flex-direction: column;
+ font-size: 12px;
+
+    }
+  }
 .aboutBackground{
 color: #000000;
-/* background-color: beige; */
+/* background-color: rgb(89, 23, 177); */
 width: 12.5%;
 height: 100%;
 font-weight: bold;
 display: block;
 justify-content: space-between;
 }
+@media (max-width: 768px) {
+    .aboutBackground p{
+font-size: 15px;
+
+    }
+  }
 .aboutFrontground{
     width: 25%;
     height: 120%;
@@ -166,8 +317,14 @@ justify-content: space-between;
 display: inline-block;
 
 }
+@media (max-width: 768px) {
+    .aboutFrontground p{
+font-size: 15px;
+
+    }
+  }
 .aboutBackground2{
-    /* background-color: chartreuse; */
+    /* background-color: rgb(209, 164, 15); */
     width: 25%;
     height: 100%;
     font-weight: bold;
@@ -180,22 +337,33 @@ display: inline-block;
    
 }
 .aboutButtonDownloadResume{
-    background-color: #043028;
-    width: 15%;
+    background-color: #03310b;
+    width:25%;
     height: 10%;
     color: #ffffff;
     font-weight: bold;
     display: flex;
     align-items: center;
     /* margin-top: 2%; */
-    padding-left: 3%;
+    padding-left: 5%;
     position: relative;
-    margin-bottom: 5%;
-    border-color:green;
+   
+    border-color:rgb(35, 218, 35);
     border-radius: 10px;
-    margin-left: 30%;
+    margin-left: 37%;
+    margin-top: 30%;
 
 }
+@media (max-width: 768px) {
+    .aboutButtonDownloadResume {
+margin-top: 35%;
+width: 50%;
+align-items: center;
+margin-left: 18%;
+height: auto;
+  
+    }
+  }
   .aboutButtonDownloadResume a {
     text-decoration: none;
     color: inherit;
