--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -6,29 +6,42 @@ body{
     word-wrap: break-word;
     font-weight: 400;
     background-color: #f8f8f8;
-    color: #767676;
+    color: #ffffff;
     box-sizing: border-box;
 }
 .contactContainer2{
-   background-color: #f8f8f8;
-    height: 90vh;
+    background-color: #010222;
+    height: 150vh;
     display: block;
    
 }
+@media (max-width: 768px) {
+    .contactContainer2 {
+display: flex;
+flex-direction: column;
+height: 150vh;
+  
+    }
+  }
 .contactContainer2 img{
     background-size: cover;
-    height: 90vh;
-    width:100%;
-
+    height: 115vh;
+    width:80%;
+    position: relative;
     margin-top: 0%;
     display: flex;
     position:absolute;
     border-radius: 10px;
-
-
-
+    margin-left: 20%;
     
 }
+@media (max-width: 768px) {
+    .contactContainer2 img {
+height: 130vh;
+  
+    }
+  }
+
 .container2Text{
     /* background-color: rgb(236, 165, 11); */
     height: 7%;
@@ -46,24 +59,51 @@ margin-top: 10%; */
 /* position:a; */
 /* margin-top: 20%; */
 }
+@media (max-width: 768px) {
+    .container2Text {
+display: flex;
+font-size: 25px;
+width:50%;
+margin-left: 23%;
+margin-top: 10%;
+  
+    }
+  }
 .contactMapInfo{
     /* background-color: rgb(8, 67, 145); */
+    /* background-color: #9b9215; */
     height:90vh;
     width:80%;
     margin-left: 20%;
     margin-top: 3%;
     display: flex;
     position:relative;
+    color: #ffffff;
 }
+@media (max-width: 768px) {
+    .contactMapInfo {
+display: flex;
+flex-direction: column;
+margin-top: 0%;
+position: relative;
+margin-left: 15%;
+width: 300px;
+
+  
+    }
+  }
 .contactInfoContainer{
-    background-color:transparent;
-    height:75vh;
-    width: 700px;
+    /* background-color:transparent; */
+    height:85vh;
+    width: 500px;
+    background-color: transparent;
     margin-left: 20%;
     margin-bottom: 80%;
     margin-top: 5%;
     border-radius: 20px;
     padding-left: 12px;
+    font-size: 20px;
+    /* background-color: black; */
     /* position: relative; */
     margin-right: 10%;
     color: #ffffff;
@@ -72,7 +112,19 @@ margin-top: 10%; */
     /* margin-top: 10%; */
     animation: fade-in-out 6s ease-in-out infinite;
 }
+@media (max-width: 768px) {
+    .contactInfoContainer{
 
+  margin-top: 5%;
+  width: 280px;
+  font-size: 15px;
+  position: relative;
+margin-left: 0%;
+height: 700px;
+/* margin-left: 20%; */
+
+    }
+  }
 @keyframes fade-in-out {
   0%, 100% {
     opacity: 1;
@@ -85,17 +137,30 @@ margin-top: 10%; */
 
 }
 .contactMapContainer{
-    background-color: rgb(244, 246, 248);
+    background-color: #020433;
     height:80vh;
+    /* background-color: #010222; */
     width:70%;
-    margin-left: 10%;
-    margin-top: 5%;
+    margin-left: 8%;
+    margin-top: 4%;
     position: relative;
     border-radius: 20px;
 }
+@media (max-width: 768px) {
+    .contactMapContainer{
+
+height: max-content;
+width: 270px;
+font-size: 15px;
+margin-left: 0%;
+/* background-color: aqua; */
+  
+    }
+  }
 .mapContainerText {
-    /* background-color: rgb(12, 36, 36); */
+    /* background-color: rgb(5, 54, 54); */
     height:60vh;
+    
     width:70%;
     margin-left: 10%;
     margin-top: 10%;
@@ -106,6 +171,8 @@ margin-top: 10%; */
     font-size: 13px;
     align-self: last baseline;
 }
+
+
 .mapContainerText h3{
     font-size:20px;
     font-weight:bold;
@@ -117,12 +184,12 @@ margin-top: 10%; */
 .buttonSubmit{
     background-color: #ffffff;
     position: relative;
-    height: 6vh;
+    height: 7vh;
     width: 25%;
     padding-left: 10%;
     display: flex;
     align-items: center;
-    margin-top: 20%;
+    margin-top: 15%;
     color: transparent;
     margin-left: 37%;
     border-radius: 10px;
@@ -139,9 +206,10 @@ color:#ffffff;
 
 .callUs{
     position: relative;
-    height:5vh;
-    width:50%;
+    height:15vh;
+    width:45%;
     margin-top: 10%;
+    /* background-color: #010222; */
     /* background-color: rgb(158, 15, 94); */
     display: flex;
     align-items: center;
@@ -149,6 +217,14 @@ color:#ffffff;
     /* font-size: large; */
     
 }
+/* @media (max-width: 768px) {
+    .contactMapContainer{
+
+margin-top: 0px;
+  
+    }
+  } */
+
 .callIconText{
     /* position: relative; */
     height:9vh;
@@ -161,6 +237,14 @@ color:#ffffff;
     position: absolute;
     font-size: 14px;
 }
+@media (max-width: 768px) {
+    .callIconText{
+
+margin-top: 55px;
+  
+    }
+  }
+
 .location{
     position: relative;
     height:5vh;
@@ -171,6 +255,14 @@ color:#ffffff;
     align-items: center;
     font-size: 20px;
 }
+@media (max-width: 768px) {
+    .location{
+
+margin-top: 5px;
+  
+    }
+  }
+
 .locationText{
     height:9vh;
     width:100%;
@@ -182,6 +274,13 @@ color:#ffffff;
     position: absolute;
     font-size: 13px; 
 }
+@media (max-width: 768px) {
+    .locationText{
+
+margin-top: 55px;
+  
+    }
+  }
 .businessHours{
     position: relative;
     height:5vh;
@@ -192,6 +291,13 @@ color:#ffffff;
     align-items: center;
     font-size: 20px; 
 }
+@media (max-width: 768px) {
+    .businessHours{
+
+margin-top: 55px;
+  
+    }
+  }
 .BusinessHoursText{
     height:9vh;
     width:100%;
@@ -203,3 +309,10 @@ color:#ffffff;
     position: absolute;
     font-size: 14px; 
 }
+@media (max-width: 768px) {
+    .BusinessHoursText{
+
+margin-top: 55px;
+  
+    }
+  }
