--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,18 +2,27 @@ body {
   font-family: Mulish;
   font-size: 15px;
   line-height: 30px;
-  letter-spacing: .5px;
+  letter-spacing: .8px;
   word-wrap: break-word;
   font-weight: 400;
   background-color: #f8f8f8;
-  color: #767676;
+  color: #ffffff;
   box-sizing: border-box;
 }
 .homeContainer2{
-  background-color: rgb(239, 242, 245);
-    height: 100vh;
+  /* background-color: rgb(111, 155, 199); */
+    height: 130vh;
+    background-color: #010222;
      /* width: 75%;
     position:relative  */
+}
+@media (max-width: 768px) {
+  .homeContainer2 {
+    display: flex;
+  flex-direction: column;
+height: 150vh;
+
+  }
 }
 .icon{
   height: 24px;
@@ -22,26 +31,58 @@ body {
 .homeContainerPicText{
     display: flex;
     justify-content: space-around;
-    
-    
-    
-   
+    /* position: absolute; */
+      /* background-color: rgb(170, 170, 105); */
+  width: 70%;
+  height: 80vh;
+ position: absolute;
+  margin-left: 25%;
+  margin-top: 4%;
+  justify-content: center;
+  align-items: center;
 
+}
+@media (max-width: 768px) {
+  .homeContainerPicText {
+    display: flex ;
+  flex-direction: column;
+  /* background-color: tomato; */
+  /* width: initial; */
+ margin-left: 10%;
+  height: auto;
+  
+  
+ 
+  }
 }
 .homeContainerPic{
   width: 100%;
   height: 60vh;  
   /* background-color: rgb(214, 214, 191); */
-  margin: 50px auto; /* Add margin to center the outer container and create space around it */
+
   position: relative;
-  top: 80px; /* Add equal spacing at the top */
-  right: 50px; /* Add equal spacing at the right */
-  bottom: 50px; /* Add equal spacing at the bottom */
-  left: 400px;
+
+ 
+ 
+  /* margin-left: 10%; */
  
 }
+@media (max-width:768px) {
+  .homeContainerPic {
+
+  /* background-color: rgb(151, 114, 107); */
+  width: 350px;
+  height:380px;
+  display: flex;
+  align-items: center;
+ /* padding-left: 86px; */
+ margin-top: 20%;
+ margin-left: 25%;
+  }
+}
+
 .homeImageBoarder {
-    width: 80%;
+    width: 75%;
     height: 50vh;
     background-color: hsla(0, 0%, 6%, 0.3);
     margin: 40px auto 20px auto;
@@ -75,6 +116,16 @@ body {
  
     /* animation: foldBorder 4s linear infinite alternate; */
   }
+  @media (max-width: 768px) {
+    .homeImageBoarder {
+    
+      width: 380px;
+  height:380px;
+    
+    
+   
+    }
+  }
   
   .homeImage {
     width: 90%;
@@ -89,6 +140,44 @@ body {
     position: absolute;
     /* animation: spinImage 2s linear infinite alternate; */
   }
+ 
+  /* @media (max-width: 768px) {
+    .homeImage {
+ background-color: #996262;
+ width: 260px;
+ 
+  
+    }
+  } */
+  /* @media (max-width:768px) {
+    .homeImageBoarder { */
+ /* background-color: #996262; */
+ /* width: 260px; */
+ /* margin-left: 20px; */
+  
+    /* }
+  } */
+  /* @media (max-width: 768px) {
+    .homeImage img { */
+ /* background-color: #996262; */
+ /* width: 270px;
+ height: 100px;
+ margin-left: 20px;
+  
+    }
+  } */
+/*   
+   @media (max-width: 768px) {
+    .homeImage img {
+    
+      width: 20px;
+      height: 20px;
+    
+    
+   
+    }
+  } */
+  
   .homeImage img{
     object-fit: cover;
     width: 100%;
@@ -111,7 +200,7 @@ body {
     animation-play-state: running;
     animation-name: morph;
 
-    box-shadow: inset 0 0 0 30px hsl(0deg 0% 50% / 30%);
+    box-shadow: inset 0 0 0 30px hsl(0deg 0% 50% / 0%);
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
     border-top-left-radius: 60%;
     border-top-right-radius: 40% 30%;
@@ -155,35 +244,48 @@ body {
     }
   }
 
-  /* .displayPic{
-    width: 80%;
-    height: 40vh;
-    background-color: #000000;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: moveImage 2s linear infinite alternate;
-    position:relative;
-  } */
-.homeContainerText{
 
+.homeContainerText{
+background-color: #21a4b6;
     width: 100%;
     height: 100%;
     /* margin-left: 6%;
     margin-top: 80%; */
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
 
 }
-.homeText,.homeTextMyname{
-    width:100% ;
-    height: 60vh;
-    background-color: rgb(239, 242, 245);
-    margin: 8%;
+.homeTextMyname{
+  width:100% ;
+  height: 60vh;
+  /* background-color: rgb(239, 242, 245); */
+  /* margin: 8%; */
+  display: block;
+ margin-left: 5%;
+ margin-right: 5%;
+}
+.homeText{
+    width:120% ;
+    border-radius: 10px;
+    height: 85vh;
+    background-color: transparent;
+    /* margin: 8%; */
     display: block;
    margin-left: 5%;
    margin-right: 5%;
-   box-shadow: 5px 5px 5px rgba(5, 5, 5, 0.01);
+   /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+   /* box-shadow: 5px 5px 5px rgba(5, 5, 5, 0.01); */
    
+}
+@media (max-width: 768px) {
+  .homeText {
+
+width: 300px;
+height: 430px;
+margin-left: 14%;
+font-size: 15px;
+margin-top: 20px;
+
+  }
 }
 .homeTextMyname{
     /* background-color:#ffffff; */
@@ -194,11 +296,21 @@ body {
     font-size: 30px;
     margin-left: 30px;
     align-items: center;
-    color: #000000;
+    color: #ffffff;
     margin-top: 15%;
     padding-top: 5%;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
+}
+@media (max-width: 768px) {
+  .homeTextMyname {
+
+height: max-content;
+margin-top: 0;
+font-size: 20px;
+margin-left: 10px;
+
+  }
 }
 .homeTextMySkill{
     display: block;
@@ -207,7 +319,7 @@ body {
     font-weight:bold;
     font-size: 20px;
     align-items: center;
-    color:#000000;
+    color:#ffffff;
     /* background-color: blue; */
     justify-content: space-between;
     /* margin-top: 5%; */
@@ -219,24 +331,35 @@ body {
 }
 .homeTextmySkilldescription{
     /* background-color: black; */
-    height: 20%;
+    height: 40%;
     width: 90%;
-    color:#3d3d3d;
-    font-size: 20px;
+    color:#ffffff;
+    font-size: 23px;
     margin-left: 9%;
    
 }
 .homeSocialMediaIcons{
-    /* background-color: rgb(18, 126, 221); */
-    height: 20%;
-    width: 50%;
+    background-color:transparent;
+    height: 10%;
+    width: 65%;
     margin-top: 5%;
-    margin-left: 9%;
+    margin-left: 20%;
     display: flex;
-    padding-top: 6%;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(185, 153, 153, 0.3);
+    backdrop-filter: blur(1px);
+   
     align-items: center;
     justify-content: space-evenly;
     transition: all 8s ease-in-out;
+}
+@media (max-width: 768px) {
+  .homeSocialMediaIcons {
+
+margin-top: 70%;
+justify-content: space-around;
+
+  }
 }
 .homeTwitterIcon:hover{
   transform: scale(1.4) translateY(-2px);
