--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -6,26 +6,166 @@ body {
     word-wrap: break-word;
     font-weight: 400;
     background-color: #f8f8f8;
-    color: #767676;
+    color: #ffffff;
     /* background-color: tomato; */
     box-sizing: border-box;
   }
 .portfolioContainer2{
     /* background-color: rgb(166, 114, 196); */
-    height: 100vh;
-    width: 80%;
-    position: relative;
-    margin-left: 19.0%;
-    display: flex;
+    background-color: #010222;
+  height: 100vh;
+  display: flex;
+
 }
+@media (max-width: 768px) {
+  .portfolioContainer2 {
+   display: flex;
+    flex-direction: column;
+    height: 160vh;
+    width: auto;
+    
+  }
+}
+.projectHolder{
+  position: relative;
+  
+  /* background-color: aqua; */
+  height: 79%;
+  width: 95%;
+  margin-top: 12%;
+  margin-left: 1%;
+  /* display: flex; */
+  /* flex-direction: row; */
+}
+@media (max-width: 768px) {
+  .projectHolder {
+   display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 250px;
+    margin-top: 45%;
+    justify-content: space-between;
+  }
+}
+.showCase{
+  position: absolute;
+  margin-top:15% ;
+  /* background-color: blue; */
+  height: 55vh;
+  width: 30%;
+  margin-left: 25%;
+  justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .showCase {
+  
+    height: 300px;
+    width: 280px;
+    margin-left:15%;
+    margin-top: 50%;
+  }
+}
+.showCase img{
+  position: relative;
+  height: 80%;
+  width: 100%;
+  border-radius: 10%;
+  transition: transform 0.5s ease;
+}
+
+.showCase img:hover {
+  transform: scale(1.1);
+}
+.ProjectDetails{
+  position: relative;
+  background-color: #ffffff;
+  height: 20%;
+  width: 60%;
+  margin-left: 15%;
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 30px;
+  transition: transform 0.5s ease;
+  box-shadow: 0 0 90px rgba(0, 0, 0, 0.2);
+  
+}
+@media (max-width: 768px) {
+  .ProjectDetails {
+  
+   width: 68%;
+   height: 20%;
+   display: flex;
+   align-items: center;
+  /* padding-left: 10px; */
+  }
+}
+
+.ProjectDetails:hover{
+  transform: scale(1.1);
+}
+
+.ProjectDetails h1{
+font-size: 30px;
+font-weight: bold;
+/* color: #000000; */
+text-align: center;
+color: #767676;
+
+/* padding-left: 150px; */
+}
+@media (max-width: 768px) {
+  .ProjectDetails h1 {
+ 
+   font-size: 25px;
+   /* padding-left: 10px; */
+  }
+}
+@media (max-width: 768px) {
+  .ProjectDetails {
+ 
+   width: 200px;
+   /* padding-left: 10px; */
+  }
+}
+.projectDescription{
+  position: absolute;
+  /* background-color: rgb(85, 187, 235); */
+  height: 50%;
+  width: 20%;
+  margin-left:80%;
+}
+.icon{
+  color: #0f0f0f;
+  margin-left:50%;
+}
+@media (max-width: 768px) {
+  .icon {
+margin-left: 90%;
+justify-content: center;
+  }
+}
+
 .showcase2{
   background-color: transparent;
   position: relative;
-  margin-top:17% ;
+  margin-top:15%;
+
   /* background-color: blue; */
   height: 50vh;
-  width: 40%;
-  margin-left: 50%;
+  width: 30%;
+ 
+  margin-left: 65%;
+}
+@media (max-width: 768px) {
+  .showcase2 {
+  
+    height: 300px;
+    width: 280px;
+    margin-top: 160%;
+    margin-left: 15%;
+  }
 }
 .showcase2 img{
   position: relative;
@@ -46,80 +186,47 @@ body {
   font-weight: bold;
   /* background-color: blue; */
   width:40%;
-  padding-left: 10%;
-  margin-top: 5%;
+  margin-left: 20%;
+  margin-top: 2%;
   height: 10vh;
 align-items: center;
+}
+@media (max-width: 768px) {
+  .containerText {
+  
+   margin-top:2%;
+   width: 50%;
+   height: 20%;
+   margin-left: 10%;
+  }
+}
+@media (max-width: 768px) {
+  .containerText p {
+  
+   font-size: 40px;
+  }
 }
 .testSubtitle{
   position: absolute;
   /* background-color: black; */
   width: 90%;
   /* color: #000000; */
-  margin-top: 10%;
-  color: #767676;
+  margin-top: 7%;
+  color: #ffffff;
   display: flex;
   font-size: 25px;
   height: 10vh;
-  padding-left: 20px;
+  margin-left: 23%;
  
 }
-.showCase{
-  position: absolute;
-  margin-top:17% ;
-  /* background-color: blue; */
-  height: 55vh;
-  width: 30%;
-  margin-left: 5%;
-  justify-content: space-between;
-}
-.showCase img{
-  position: relative;
-  height: 80%;
-  width: 100%;
-  border-radius: 10%;
-  transition: transform 0.5s ease;
-}
-
-.showCase img:hover {
-  transform: scale(1.1);
-}
-.ProjectDetails{
-  position: relative;
-  background-color: #ffffff;
-  height: 20%;
-  width: 80%;
-  margin-left: 10%;
-  display: flex;
-  border-radius: 30px;
-  transition: transform 0.5s ease;
-  box-shadow: 0 0 90px rgba(0, 0, 0, 0.2);
+@media (max-width: 768px) {
+  .testSubtitle {
   
+   margin-top:25%;
+   width: 80%;
+   height: 15%;
+   padding-left:10px ;
+   margin-left: 10%;
+   font-size: 20px;
+  }
 }
-.ProjectDetails:hover{
-  transform: scale(1.1);
-}
-
-.ProjectDetails h1{
-font-size: 30px;
-font-weight: bold;
-/* color: #000000; */
-text-align: center;
-color: #767676;
-padding-left: 50px;
-}
-.projectDescription{
-  position: absolute;
-  /* background-color: rgb(85, 187, 235); */
-  height: 10%;
-  width: 20%;
-  margin-left:80%;
-}
-.icon{
-  color: #0f0f0f;
-  margin-left:50%;
-
-
-
-}
-
