--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -84,7 +84,7 @@ height: 150vh;
 .homeImageBoarder {
     width: 75%;
     height: 50vh;
-    background-color: hsla(0, 0%, 6%, 0.3);
+    background-color: hsl(0deg 0% 100% / 30%);
     margin: 40px auto 20px auto;
     display: flex;
     justify-content: center;
@@ -267,7 +267,8 @@ background-color: #21a4b6;
     width:120% ;
     border-radius: 10px;
     height: 85vh;
-    background-color: transparent;
+    /* background-color:powderblue; */
+    /* background-color: transparent; */
     /* margin: 8%; */
     display: block;
    margin-left: 5%;
@@ -280,8 +281,8 @@ background-color: #21a4b6;
   .homeText {
 
 width: 300px;
-height: 430px;
-margin-left: 14%;
+height: 440;
+margin-left: 17%;
 font-size: 15px;
 margin-top: 20px;
 
@@ -356,7 +357,7 @@ margin-left: 10px;
 @media (max-width: 768px) {
   .homeSocialMediaIcons {
 
-margin-top: 70%;
+margin-top: 50%;
 justify-content: space-around;
 
   }
