--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,7 +11,7 @@ body {
 }
 .homeContainer2{
   /* background-color: rgb(111, 155, 199); */
-    height: 130vh;
+    height: 150vh;
     background-color: #010222;
      /* width: 75%;
     position:relative  */
@@ -20,7 +20,7 @@ body {
   .homeContainer2 {
     display: flex;
   flex-direction: column;
-height: 150vh;
+height: 180vh;
 
   }
 }
@@ -136,7 +136,7 @@ height: 150vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: transparent;
+    /* background-color: hsl(0deg 0% 100% / 30%); */
     position: absolute;
     /* animation: spinImage 2s linear infinite alternate; */
   }
@@ -281,7 +281,7 @@ background-color: #21a4b6;
   .homeText {
 
 width: 300px;
-height: 440;
+height: 350;
 margin-left: 17%;
 font-size: 15px;
 margin-top: 20px;
@@ -308,7 +308,7 @@ margin-top: 20px;
 
 height: max-content;
 margin-top: 0;
-font-size: 20px;
+font-size: 30px;
 margin-left: 10px;
 
   }
@@ -339,6 +339,14 @@ margin-left: 10px;
     margin-left: 9%;
    
 }
+@media (max-width: 768px) {
+  .homeTextmySkilldescription {
+
+font-size: 20px;
+
+
+  }
+}
 .homeSocialMediaIcons{
     background-color:transparent;
     height: 10%;
@@ -357,7 +365,7 @@ margin-left: 10px;
 @media (max-width: 768px) {
   .homeSocialMediaIcons {
 
-margin-top: 50%;
+margin-top: 30%;
 justify-content: space-around;
 
   }
