--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -365,9 +365,10 @@ font-size: 20px;
 @media (max-width: 768px) {
   .homeSocialMediaIcons {
 
-margin-top: 30%;
+margin-top: 40%;
 justify-content: space-around;
-
+width:90%;
+margin-left: 5%;
   }
 }
 .homeTwitterIcon:hover{
