--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -383,6 +383,9 @@ justify-content: space-around;
 width:90%;
 margin-left: 5%;
   }
+  .downloadResumeLink{
+    margin-top: 180px;
+  }
 }
 .homeTwitterIcon:hover{
   transform: scale(1.4) translateY(-2px);
